plugins {
  id 'base'

  id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'

  id "com.github.ben-manes.versions" version "0.53.0"
  id "com.gorylenko.gradle-git-properties" version "2.5.7" apply false
}

def isNonStable = { String version ->
  def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
  def regex = /^[0-9,.v-]+(-r)?$/
  return !stableKeyword && !(version ==~ regex)
}
def majorOf = { String version ->
  def m = version =~ /^(\d+)/
  m.find() ? (m.group(1) as Integer) : null
}
def isMajorBump = { String current, String candidate ->
  def c = majorOf(current); def n = majorOf(candidate)
  c != null && n != null && n > c
}
// 3.2.x targets Jakarta EE 10. Reject candidate versions that cross into EE 11
// even when the major number doesn't change (Servlet 6.0 → 6.1, WebSocket 2.1 → 2.2).
def isPostEE10 = { String group, String name, String candidate ->
  def parts = candidate.tokenize('.')
  if (parts.size() < 2) return false
  def major = parts[0] as Integer
  def minor = parts[1] as Integer
  (group == 'jakarta.servlet'   && name == 'jakarta.servlet-api'   && (major > 6 || (major == 6 && minor > 0))) ||
  (group == 'jakarta.websocket' && name == 'jakarta.websocket-api' && (major > 2 || (major == 2 && minor > 1)))
}
tasks.named("dependencyUpdates").configure {
  rejectVersionIf {
    isNonStable(it.candidate.version) ||
      isMajorBump(it.currentVersion, it.candidate.version) ||
      isPostEE10(it.candidate.group, it.candidate.module, it.candidate.version)
  }
}
// ./gradlew dependencyUpdates

allprojects {
  group = 'org.sitemesh'
  repositories { mavenCentral() }
}

subprojects {
  apply plugin: 'java-library'
  apply plugin: 'maven-publish'
  apply plugin: 'signing'
  apply plugin: 'com.gorylenko.gradle-git-properties'

  java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
    withSourcesJar()
    withJavadocJar()
  }

  publishing {
    publications {
      mavenJava(MavenPublication) {
        from components.java
        pom {
          name = project.name
          description = 'SiteMesh 3 – HTML decoration and layout framework'
          url = 'https://github.com/sitemesh/sitemesh3'
          licenses {
            license {
              name = 'Apache License, Version 2.0'
              url = 'https://www.apache.org/licenses/LICENSE-2.0'
              distribution = 'repo'
            }
          }
          scm {
            url = 'https://github.com/sitemesh/sitemesh3'
            connection = 'scm:git:https://github.com/sitemesh/sitemesh3.git'
            developerConnection = 'scm:git:ssh://git@github.com/sitemesh/sitemesh3.git'
          }
          developers {
            developer {
              id = 'sitemesh'
              name = 'SiteMesh Contributors'
              url = 'https://github.com/sitemesh'
            }
          }
        }
      }
    }
  }

  signing {
    def key = findProperty('signing.key') as String
    def pass = findProperty('signing.password') as String
    if (key && pass) {
      useInMemoryPgpKeys(key, pass)
      sign publishing.publications
    }
  }
}

nexusPublishing {
  packageGroup.set('org.sitemesh')
  repositories {
    sonatype {
      nexusUrl.set(uri('https://ossrh-staging-api.central.sonatype.com/service/local/'))
      snapshotRepositoryUrl.set(uri('https://central.sonatype.com/repository/maven-snapshots/'))
      username.set(providers.gradleProperty('sonatypeUsername'))
      password.set(providers.gradleProperty('sonatypePassword'))
    }
  }
}
